Calculator 测试类在Android中使用Junit进行单元测试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'fm.jiecao:jiecaovideoplayer:5.5.2'//jcvd视频播放插件
+    compile 'com.squareup.picasso:picasso:2.5.1'
     testCompile 'junit:junit:4.12'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
